# differentiable-rasterizer

./: .gitignore  Cargo.toml  LICENSE  README.md  compile_video.py  gradients.txt  plot_losses.py
.github/workflows/: release.yml
network/: data.py  find_best_network_architecture.py  network.py  output.json  run_trials.py  save_weights.py  train.py  tune_best_network.py
network/weights/: layer_1_bias.npy  layer_1_weight.npy  layer_2_bias.npy  layer_2_weight.npy  layer_3_bias.npy  layer_3_weight.npy  layer_4_bias.npy  layer_4_weight.npy  layer_5_bias.npy  layer_5_weight.npy
src/: bezier.rs  circle.rs  lib.rs  main.rs  math.rs  network.rs
