[package]
name = "drast"
authors = ["Fahd Baba <fahd31256@gmail.com>"]
edition = "2024"
description = "A fast, differentiable 2D rasterizer that optimizes circle parameters to match a target image"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/fqhd/drast"
keywords = ["differentiable", "rasterizer", "graphics", "optimization"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fastrand = "2.3.0"
image = "0.25.6"

[[bin]]
name = "drast"
path = "src/main.rs"

exclude = ["/images/*", "/frames/*", "*.gif", "*.png", "*.jpg"]
